--- a/index.html
+++ b/index.html
@@ -151,18 +151,42 @@
 
             <div class="Column_1">
                 <h1>About</h2>
-                    <p>I am a software developer who loves to code! I enjoy spending time outdoors and with my husband, horse, dog and cats. <br><br> I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>'s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more. <br><br> I am a full-stack developer and would love to work with you on your project. <a href="#Contact">Contact</a> me below!</p>
+                    <p>I am a software developer who loves to code! I enjoy spending time outdoors and with my husband, horse, dog and cats. <br><br> I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>'s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, Python, C# and more. <br><br> I am a full-stack developer and would love to work with you on your project. <a href="#Contact">Contact</a> me below!</p>
             </div>
         </div>
 
         <div class="Row" id="GitHub">
             <div class="Column_1">
-                <h1>GitHub</h1>
-                <p>You can view my coding projects on my GitHub profile here:<br>
+                <h1>Skills Showcase</h1>
+                <p>You can view all my coding projects via my GitHub profile here:<br>
                 <center><a href="https://github.com/SamanthaEpling" target="_blank">Samantha Epling GitHub</a></center></p>
+                    <div>
+                        <h5>HTML & CSS Projects</h5>
+                        <p>One of my earliest designs for coursework requirements, but includes several pictures of my animal family.</p>
+                        <center><a href="https://github.com/SamanthaEpling/Sams_HTML_and_CSS_Projects/tree/master/One-Page_Website" target="_blank">One-Page Website project</a></center>
+                    </div>
+                    <div>
+                        <h5>JavaScript Projects</h5>
+                        <p>This project of my coursework illustrates how clients can interact with webpages by an ordering menu that supplies information as a person selects elements of the page.</p>
+                        <center><a href="https://github.com/SamanthaEpling/JavaScriptProjects/tree/master/Pizza_Project" target="_blank">Pizza Ordering Menu project</a></center>
+                        <p>This project, provided by my coursework, illustrates how multiple users can interact, how elements like sound and opacity can be incorporated behind the scenes, so the user can just be blissfully playing a game, without having to give lots of commands.</p>
+                        <center><a href="https://github.com/SamanthaEpling/The-Tech-Academy-SQL-Coding-Projects" target="_blank">Tic Tac Toe Game project</a></center>
+                    </div>
+                    <div>
+                        <h5>SQL Projects</h5>
+                        <p>For this portion of my coursework, I had to not only create my database just from an image, but also populate it too!  Then I could create queries to identify related information.</p>
+                        <center><a href="https://github.com/SamanthaEpling/The-Tech-Academy-SQL-Coding-Projects" target="_blank">Library Management System project</a></center>
+                    </div>
+                    <div>
+                        <h5>Python Projects</h5>
+                        <p>This portion of my coursework had us work along a sample project to show just how robust and interactive using Python and the packages Tkinter and Django could be.  Through the tutorial project, we saw and learned to incorporate tags, with Python syntax, to have HTML, CSS, JS and Python code work concurrently to modify a dynamic template to create and interact with databases and administrative processes.  I also learned to to more effectively use command line prompt to generate a mock-server to test out the functanality of our project and to generate a virtual environment much as I would do when I would be coding for a client.  See the screenshot to the right to see how complex coding can be to create a dynamic website!</p>
+                        <center><a href="" target="_blank"></a></center>
+                    </div>
+            
+            
             </div>
             <div class="Column_2">
-                <a href="https://github.com/SamanthaEpling" target="_blank"><img src="Stylesheet/Images/GitHub.png" alt="GitHub"></a>
+                <a href="https://github.com/SamanthaEpling" target="_blank"><img src="Stylesheet/Images/Python_work_screenshot.png" alt="Screenshot showing PyCharm, Command Line Prompt, DB Browser for SQLite, and website of tutorial."></a>
             </div>
         </div>
 
